--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "league/omnipay": "^3.0",
         "nexmo/laravel": "^2.1",
+        "omnipay/stripe": "^3.1",
         "uxweb/sweet-alert": "^2.0",
         "yoeunes/toastr": "^1.2"
     },
