--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "league/omnipay": "^3.0",
+        "nexmo/client": "^2.0",
         "nexmo/laravel": "^2.1",
         "omnipay/stripe": "^3.1",
         "uxweb/sweet-alert": "^2.0",
